--- a/resources/css/content_home.css
+++ b/resources/css/content_home.css
@@ -1,15 +1,39 @@
 .label {
     -fx-text-fill: #9CA4B2;
+    -fx-font-size: 14;
 }
 
 .text-field {
     -fx-background-color: #343B45;
     -fx-border-color: #171A23;
-    -fx-border-radius: 0.3em;
-    -fx-background-radius: 0.3em;
+    -fx-border-radius: 4;
+    -fx-background-radius: 4;
 
     -fx-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
     -fx-text-fill: #9CA4B2;
     -fx-alignment: center;
+}
+
+.display-time {
+    -fx-font-size: 20;
+    -fx-text-fill: #7986CB;
+}
+
+.separator .line {
+    -fx-border-color: #7986CB;
+    -fx-border-width: 0.5;
+}
+
+.progress-bar .bar {
+    -fx-background-color: #7986CB;
+    -fx-background-insets: 0 0 0 0;
+    -fx-padding: 0 5 0 5;
+}
+
+.my-progress-bar > .track {
+    -fx-background-color: #171A23;
+    -fx-control-inner-background: palegreen;
+    -fx-text-box-border: forestgreen;
+    -fx-accent: #171A23;
 }
