--- a/resources/fxml/main_window.fxml
+++ b/resources/fxml/main_window.fxml
@@ -35,7 +35,6 @@
 
     <!-- This is just a test, and should be moved to another file when more screens are added -->
     <center>
-        <!-- -->
         <VBox fx:id="contentHome" alignment="TOP_CENTER" fillWidth="false" spacing="10"
               style="-fx-background-color: #282C35; -fx-padding: 4em 4em 4em 4em;">
 
@@ -51,7 +50,7 @@
             </VBox>
 
             <!-- Temperature group -->
-            <GridPane hgap="10" vgap="5">
+            <GridPane fx:id="temperatureGroup" hgap="10" vgap="5">
                 <rowConstraints>
                     <RowConstraints/>
                     <RowConstraints/>
@@ -68,8 +67,8 @@
                 <TextField fx:id="fldHomeTemp" editable="false" prefColumnCount="${fldHomeTemp.length}" text="28 °C"
                            GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
 
-                <!--<ProgressBar prefWidth="${fldHomeTemp.width}" prefHeight="5" progress="0.5"
-                             GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.halignment="CENTER"/>-->
+                <ProgressBar prefHeight="5" prefWidth="${fldHomeTemp.width}" progress="0.5" GridPane.columnIndex="1"
+                             GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
 
                 <!-- Min temperature -->
                 <Label text="Min" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
@@ -84,6 +83,24 @@
                            GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
 
             </GridPane>
+
+            <Separator id="separator-home" prefWidth="${temperatureGroup.width}"/>
+
+            <!-- Current program on/off times -->
+
+            <VBox alignment="CENTER" fillWidth="false" spacing="5">
+                <Label text="Current Program"/>
+
+                <HBox spacing="5" alignment="CENTER">
+                    <TextField fx:id="fldTimeOn" editable="false" maxWidth="90" prefColumnCount="${fldTimeOn.length}"
+                               text="Sat, 00:00"/>
+
+                    <!--<Slider prefWidth="50" disable="true" value="0.6" min="0" max="1"/>-->
+
+                    <TextField fx:id="fldTimeOff" editable="false" maxWidth="90" prefColumnCount="${fldTimeOn.length}"
+                               text="Sat, 00:10"/>
+                </HBox>
+            </VBox>
         </VBox>
     </center>
 </BorderPane>
