Revamp communication API, add queueing functionality

--- a/resources/fxml/content_home.fxml
+++ b/resources/fxml/content_home.fxml
@@ -17,7 +17,8 @@
     <VBox alignment="CENTER">
         <Label fx:id="labelTime" styleClass="display-time" text="Sat, 00:00:00"/>
         <Separator prefWidth="${labelTime.width}"/>
-        <Label fx:id="labelDeviceTime" styleClass="display-time" text="Sat, 00:00" style="-fx-font-size: 16;"/>
+        <Label fx:id="labelDeviceTime" styleClass="display-time" text="Sat, 00:00"
+               style="-fx-font-size: 16; -fx-opacity: 0.8;"/>
     </VBox>
 
     <!-- Temperature group -->
