--- a/resources/fxml/content_settings.fxml
+++ b/resources/fxml/content_settings.fxml
@@ -2,14 +2,12 @@
 
 <?import javafx.scene.layout.VBox?>
 <?import java.net.URL?>
-<VBox xmlns:fx="http://javafx.com/fxml" fx:id="contentSettings" alignment="TOP_CENTER"
-      spacing="10"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="contentSettings" alignment="TOP_CENTER" fillWidth="false" spacing="10"
       style="-fx-background-color: -content; -fx-padding: 4em 4em 4em 4em;"
-      fx:controller="pic.thermostat.SettingsController"
-      fillWidth="false"
-      xmlns="http://javafx.com/javafx">
+      xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="pic.thermostat.SettingsController">
 
     <stylesheets>
+        <URL value="@/css/common.css"/>
         <URL value="@/css/content_settings.css"/>
     </stylesheets>
 
